conectando com o banco

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.google.firebase:firebase-core:9.6.1' //TODO 3 - adicionar esta linha que faz referêcia a bibioteca principal do Firebase
+    compile 'com.google.firebase:firebase-database:9.6.1' //TODO 4 - adicionar esta linha que faz referêcia a biblioteca de database do Firebase
 }
+apply plugin: 'com.google.gms.google-services' //TODO 5 - adicionar esta linha que faz referêcia ao plugin de conexão com o Firebase
+
