--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.google.gms:google-services:3.0.0' //TODO 2 - adicionar esta linha que faz referêcia ao SDK do Firebase
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
